--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -23,7 +23,9 @@
     <ClCompile Include="DxWindow.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Projection.cpp" />
     <ClCompile Include="View.cpp" />
+    <ClCompile Include="WorldMatrix.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="BasicPS.hlsl">
@@ -43,7 +45,9 @@
     <ClInclude Include="Dx12.h" />
     <ClInclude Include="DxWindow.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Projection.h" />
     <ClInclude Include="View.h" />
+    <ClInclude Include="WorldMatrix.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Basic.hlsli" />
