--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -24,6 +24,8 @@
     <ClCompile Include="DxWindow.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Object3d.cpp" />
+    <ClCompile Include="ObjectMaterial.cpp" />
     <ClCompile Include="Projection.cpp" />
     <ClCompile Include="View.cpp" />
     <ClCompile Include="WorldMatrix.cpp" />
@@ -47,6 +49,8 @@
     <ClInclude Include="Dx12.h" />
     <ClInclude Include="DxWindow.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Object3d.h" />
+    <ClInclude Include="ObjectMaterial.h" />
     <ClInclude Include="Projection.h" />
     <ClInclude Include="View.h" />
     <ClInclude Include="WorldMatrix.h" />
