--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -30,8 +30,11 @@
     <ClCompile Include="MipMap.cpp" />
     <ClCompile Include="Object3d.cpp" />
     <ClCompile Include="ObjectMaterial.cpp" />
+    <ClCompile Include="ObjVertex.cpp" />
+    <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Projection.cpp" />
     <ClCompile Include="RootParameter.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="TexImgData.cpp" />
     <ClCompile Include="TextureBuffer.cpp" />
     <ClCompile Include="TextureFile.cpp" />
@@ -66,8 +69,11 @@
     <ClInclude Include="MipMap.h" />
     <ClInclude Include="Object3d.h" />
     <ClInclude Include="ObjectMaterial.h" />
+    <ClInclude Include="ObjVertex.h" />
+    <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Projection.h" />
     <ClInclude Include="RootParameter.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="TexImgData.h" />
     <ClInclude Include="TextureBuffer.h" />
     <ClInclude Include="TextureFile.h" />
