--- a/DirectX12CG/DirectX12CG.vcxproj
+++ b/DirectX12CG/DirectX12CG.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="ObjectMaterial.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleMaterial.cpp" />
     <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Projection.cpp" />
     <ClCompile Include="Quaternion.cpp" />
@@ -115,6 +116,7 @@
     <ClInclude Include="ObjectMaterial.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleMaterial.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Projection.h" />
     <ClInclude Include="Quaternion.h" />
